@@ -1,4 +1,6 @@
 ver 0.21.26 (not yet released)
+* database
+  - inotify: obey ".mpdignore" files
 * output
   - osx: fix crash bug
   - sles: support floating point samples
